--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ideaone.reveraprojectapp1.SettingsActivity">
+    tools:context=".SettingsActivity"
+    android:baselineAligned="false">
 
     <LinearLayout
         android:layout_width="match_parent"
